--- a/public/index.html
+++ b/public/index.html
@@ -145,9 +145,9 @@
                     </div>
                   <!--<a href="img/Project and Team members details.xlsx" >Download here</a><br/>
                   <a href="img/Brillio Meeting Content.pptx" >SFDC & Heroku here</a><br/>-->
-                  <a href="img/New folder" >Road Map Utility</a>
-                  <a href="img/New folder/_Verizon Project & Strategy Templates .pptx" >Road Map Utility</a>
-                  <a href="img/New folder/SF Consumer Resources Details.xlsx" >Road Map Utility</a>
+                        <a href="img/New folder" >Road Map Utility</a></br>
+                  <a href="img/New folder/_Verizon Project & Strategy Templates .pptx" >Road Map Utility</a></br>
+                  <a href="img/New folder/SF Consumer Resources Details.xlsx" >Road Map Utility</a></br>
                   <a href="img/New folder/Final 2021_0710 VzC 3G Migration Executive Daily Status.pptx" >Road Map Utility</a>
                     </form>
                     <div id="message" class="alert alert-info" role="alert" style="display: none;">
